2005-02-27  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/448:
	* automake.in (handle_factored_dependencies): Flag install-hook as
	an error.
	* tests/insthook.test: Exercise this.

	* m4/lispdir.m4: Use datarootdir instead of datadir to match GCS.
	* doc/automake.texi (Hard-Coded Install Paths): Adjust.

	* doc/automake.texi: Replace many uses of @samp by @code, and
	vice versa.  Use @command, @option, and @env where appropriate.

2005-02-26  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi: "filename" -> "file name", for consistency
	with GNU Coding Standards.  See also Paul's change on 2004-08-20
	in Autoconf.

	* doc/automake.texi (A Library, Libtool Libraries): Show how to link
	a program with a static or libtool library.
	(Program and Library Variables): Make clearer that _LDADD and
	_LIBADD may also list libraries.
	Prompted by a mail from Bruce Korb.

	* doc/automake.texi (Alternative): Show how to rewrite nobase_
	variables using custom directory variables, and link to node
	Uniform.  Suggested by Leonardo Boiko.

	* doc/automake.texi (Flag Variables Ordering, User Variables):
	Make clearer who the maintainer is, and that he can AC_SUBST AM_
	variables in configure.ac.  Suggested by Norman Gray.
	(Uniform, Public macros, Libtool Issues, Java Support,
	Conditionals): Use `---' for em dash, and stick them to the
	enclosing text.

	* doc/automake.texi: Reword a few sentences to fix all underflow
	and overflow warnings during `make dvi'.
	(Auxiliary Programs) <configure.guess, config.sub>: Update URL.
	(Public macros) <AM_WITH_DMALLOC>: Likewise.

2005-02-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/INSTALL, lib/config-ml.in, lib/config.guess, lib/config.sub,
	lib/texinfo.tex: New upstream versions.

	* doc/automake.texi (Hard-Coded Install Paths): New node.
	(Extending, Extending aclocal, Python): Link to it.
	(Extending): Don't show how to install a file in /etc/ directly,
	this is insane.
