@@ -396,7 +396,7 @@ sub add_file ($)
 my $underquoted_manual_once = 0;
 
 # scan_file ($TYPE, $FILE, $WHERE)
-# -------------------------
+# --------------------------------
 # Scan a single M4 file ($FILE), and all files it includes.
 # Return the list of included files.
 # $TYPE is one of FT_USER, FT_AUTOMAKE, or FT_SYSTEM, depending
@@ -589,6 +589,8 @@ sub trace_used_macros ()
 {
   my %files = map { $map{$_} => 1 } keys %macro_seen;
   $files{'acinclude.m4'} = 1 if -f 'acinclude.m4';
+  # File included by $configure_ac are redundant.
+  $files{$configure_ac} = 1;
   %files = strip_redundant_includes %files;
   # configure.ac is implicitly included.
   delete $files{$configure_ac};
