@@ -21,6 +21,7 @@ acloca15.test \
 acloca16.test \
 acloca17.test \
 acloca18.test \
+acloca19.test \
 acoutnoq.test \
 acoutpt.test \
 acoutpt2.test \
