@@ -1,3 +1,12 @@
+2005-03-01  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	Fix for PR automake/450:
+	* aclocal.in (trace_used_macros): Do not explicitly trace files
+	included by configure.ac.
+	* tests/acloca19.test: New file.
+	* tests/Makefile.am (TESTS): Add acloca19.test.
+	Report from Peter Breitenlohner.
+
 2005-02-27  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	Fix for PR automake/448:
